refactor(sample): simplify and extract auth utilities
- Remove redundant comments, unused imports, and boilerplate across
  both sample-kotlin and sample-java
- Extract detectAuthMethod and authBase helpers from DemoController
  into SampleAuthUtils (Kotlin top-level functions / Java static class)
- Fix FullCycleHttpTest: uid header is username string not numeric ID;
  look up session token by client UUID instead of uid.toLong()